--- a/clickdraw.html
+++ b/clickdraw.html
@@ -8,12 +8,12 @@
   </style>
   <script src="jquery-3.1.1.min.js"></script>
   <body>
-    <canvas width="600" height="600" id="slate">
+    <canvas width="750" height="450" id="slate">
       hi bud...
     </canvas>
     <br>
     <button id="stop">STOP THAT I DON'T LIKE THAT!</button>
-    <button id="clear">clear</button>
+    <button id="start">Start the NIHONing</button>
   </body>
   <script type="text/javascript" src="clickdraw.js"></script>
 </html>
