i did the things

--- a/clickdraw.html
+++ b/clickdraw.html
@@ -13,7 +13,8 @@
     </canvas>
     <br>
     <button id="stop">STOP THAT I DON'T LIKE THAT!</button>
-    <button id="start">Start the NIHONing</button>
+    <button id="start1">Start the NIHONing</button>
+    <button id="start2">Start the movie waiting</button>
   </body>
   <script type="text/javascript" src="clickdraw.js"></script>
 </html>
